deployments/istio/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: sme-platform
spec:
  mtls:
    mode: STRICT
