deployments/istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sme-platform
  labels:
    istio-injection: enabled
